Refactoring some lib*'s method implementations